Changed some glossary items to \gls in text. Still need to do all

--- a/appendices/appendices.tex
+++ b/appendices/appendices.tex
@@ -1,8 +1,8 @@
-\chapter{PID gains}
+\chapter{\gls{PID} gains}
 \makeatletter\@mkboth{}{Appendix}\makeatother
 \label{appen:pid_gains}
 
-This is an appendix about PID gains used for Honeybee.
+This is an appendix about \gls{PID} gains used for Honeybee.
 
 \chapter{Random appendix}
 \makeatletter\@mkboth{}{Appendix}\makeatother
