--- a/modelling/modelling.tex
+++ b/modelling/modelling.tex
@@ -5,8 +5,8 @@
 
 This chapter discusses the mathematical modelling of a quadrotor with a suspended
 payload which is based on a practical quadrotor UAV named Honeybee.
-The model is first derived as a 2D model.
-The system identification and control system techniques in later chapters will then be explained based on the 2D model to avoid unnecessary complexity.
+The model is first derived as a \gls{2D} model.
+The system identification and control system techniques in later chapters will then be explained based on the \gls{2D} model to avoid unnecessary complexity.
 Finally, it will be described how this model and the techniques in later chapters are extended to the 3D case.
 This 3D mathematical model will be used in a nonlinear simulation of a quadrotor and suspended payload.
 1
