--- a/results/plots/havok_vs_dmd_Ttrain_2mps.tex
+++ b/results/plots/havok_vs_dmd_Ttrain_2mps.tex
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{DMD and HAVOK prediction errors for different lengths of practical training data
+    \caption{\gls{DMD} and \gls{HAVOK} prediction errors for different lengths of practical training data
     ($m =$~\SI{0.206}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:havok_vs_dmd_Ttrain_2mps}
 \end{figure}
