--- a/results/plots/havok_vs_dmd_q_2mps.tex
+++ b/results/plots/havok_vs_dmd_q_2mps.tex
@@ -49,7 +49,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{DMD and HAVOK prediction errors for different number of delays included in the model
+    \caption{\gls{DMD} and \gls{HAVOK} prediction errors for different number of delays included in the model
     ($m =$~\SI{0.206}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}, wind speed $\approx~$\SI{2}{\metre/\second}).}
     \label{fig:havok_vs_dmd_q_2mps}
 \end{figure}
