--- a/system_id/plots/MAE_vs_Ntrain_double_pend.tex
+++ b/system_id/plots/MAE_vs_Ntrain_double_pend.tex
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{HAVOK prediction error using different cable lengths with a range of different lengths of noisy training data
+    \caption{\gls{HAVOK} prediction error using different cable lengths with a range of different lengths of noisy training data
     ($l =$~\SI{1}{\metre}, $T_{train} =$~various??.)}
     \label{fig:single_vs_double_pend}
 \end{figure}
