--- a/system_id/plots/singular_values.tex
+++ b/system_id/plots/singular_values.tex
@@ -38,7 +38,7 @@
         \end{semilogyaxis}
     \end{tikzpicture} 
     
-    \caption{Significant and truncated singular values of a HAVOK model produced from noisy data
+    \caption{Significant and truncated singular values of a \gls{HAVOK} model produced from noisy data
     ($m =$~\SI{0.2}{\kilo\gram}, $l =$~\SI{0.5}{\meter}, $T_s =$~\SI{0.03}{\second}, $T_{train} =$~\SI{60}{\second}.)}
     \label{fig:singular_values}
 \end{figure}
