--- a/results/plots/prac_system_params.tex
+++ b/results/plots/prac_system_params.tex
@@ -48,6 +48,6 @@
         \end{axis}
     \end{tikzpicture} 
 
-    \caption{DMD prediction error as a function of training data length for different payload parameters}
+    \caption{\gls{DMD} prediction error as a function of training data length for different payload parameters}
     \label{fig:prac_system_params}
 \end{figure}
