--- a/results/plots/wind_Ttrain.tex
+++ b/results/plots/wind_Ttrain.tex
@@ -43,7 +43,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{Effect of wind on DMD prediction errors for different lengths of practical training data
+    \caption{Effect of wind on \gls{DMD} prediction errors for different lengths of practical training data
     ($m =$~\SI{0.206}{\kilo\gram}, $l =$~\SI{1}{\meter}, $T_s =$~\SI{0.03}{\second}).}
     \label{fig:wind_Ttrain}
 \end{figure}
