--- a/system_id/dmdc.tex
+++ b/system_id/dmdc.tex
@@ -2,15 +2,15 @@
 \label{sec:dmdc}
     
     \paragraph        
-    DMD is a regression technique that can be used to approximate a non-linear dynamical system with a linear model \cite{Tu2014}.
+    \gls{DMD} is a regression technique that can be used to approximate a non-linear dynamical system with a linear model \cite{Tu2014}.
     It uses temporal measurements of system outputs to reconstruct system dynamics without prior modelling assumptions.
-    DMDc is an adaptation of DMD that also accounts for control inputs \cite{Proctor2016c}.
-    This section provides an overview of the specific implementation of DMDc used in this work.        
-    Note that this implementation is an adaptation of DMDc, and includes time-delay-embedding of multiple observables. 
-    Enriching a DMD model with time-delay-embedding is a known technique and is also seen in other DMD adaptations \cite{Korda2018b, Arbabi2018}.
+    \gls{DMDc} is an adaptation of \gls{DMD} that also accounts for control inputs \cite{Proctor2016c}.
+    This section provides an overview of the specific implementation of \gls{DMDc} used in this work.        
+    Note that this implementation is an adaptation of \gls{DMDc}, and includes time-delay-embedding of multiple observables. 
+    Enriching a \gls{DMD} model with time-delay-embedding is a known technique and is also seen in other \gls{DMD} adaptations \cite{Korda2018b, Arbabi2018}.
 
     \paragraph
-    DMD produces a linear, discrete state-space model of system dynamics.
+    \gls{DMD} produces a linear, discrete state-space model of system dynamics.
     Discrete measurements, $\bm{x}_k$, of the continuous time observable, $\bm{x}(t)$, are used, 
     where $\bm{x}_k = \bm{x}(k T_s)$, and $T_s$ is the sampling time of the model.    
     Delay-coordinates (i.e. $\bm{x}_{k-1}, \bm{x}_{k-2}$, etc.) are also included in the state-space model to
@@ -38,9 +38,9 @@
     
     \paragraph
     The training data consists of full-state measurements, $\bm{x}_k$, and corresponding inputs, $\bm{u}_k$, 
-    taken at regular intervals of $\Delta t = T_s$, during a simulated flight with Cascaded PID control.
-    In a practical flight, these time-series measurements need to be saved in memory because it is usd as a single batch by DMD.
-    Note that DMD can be applied in a recursive manner as described in \cite{Noack2016}, 
+    taken at regular intervals of $\Delta t = T_s$, during a simulated flight with Cascaded \gls{PID} control.
+    In a practical flight, these time-series measurements need to be saved in memory because it is usd as a single batch by \gls{DMD}.
+    Note that \gls{DMD} can be applied in a recursive manner as described in \cite{Noack2016}, 
     However this implementation is not considered because memory size will not be a limitation since a companion computer will be used.
     
     \paragraph
@@ -81,7 +81,7 @@
     \begin{equation}
         \bm{X^\prime} = \bm{A} \bm{X} + \bm{A}_d \bm{X}_d + \bm{B} \bm{\Upsilon} .
     \end{equation}
-    Note that the primary objective of DMDc is to determine the best fit model matrices, $\bm{A}$, $\bm{A}_d$ and $\bm{B}$, 
+    Note that the primary objective of \gls{DMDc} is to determine the best fit model matrices, $\bm{A}$, $\bm{A}_d$ and $\bm{B}$, 
     given the data in $\bm{X^\prime}$, $\bm{X}$, $\bm{X}_d$, and $\bm{\Upsilon}$ \cite{Proctor2016c}.
     In order to group the unknowns into a single matrix, (\ref{eq:dmd_state_space}) is manipulated into the form,
     \begin{equation} \label{eq:G_Omega}
@@ -97,7 +97,7 @@
     where $\bm{\Omega}$ contains the state and control data, and $\bm{G}$ represents the system and input matrices.
     
     \paragraph
-    A SVD is performed on $\bm{\Omega}$ resulting in:
+    A \gls{SVD} is performed on $\bm{\Omega}$ resulting in:
     \(
         \bm{\Omega} = \bm{U} \bm{\Sigma} \bm{V}^T
     \).
@@ -108,7 +108,7 @@
     This is because the effect of measurement noise is mostly captured by the truncated columns of $\bm{U}$ and $\bm{V}$.
     By truncating these columns, the influence of noise in the regression problem is reduced. 
     % \murray{explain this better ??}
-    Hence the SVD is used in the truncated form: 
+    Hence the \gls{SVD} is used in the truncated form: 
     \begin{equation} \label{eq:tilde_svd}
         \bm{\Omega} \approx \Tilde{\bm{U}} \Tilde{\bm{\Sigma}} \Tilde{\bm{V}}^T ,
     \end{equation}
@@ -126,5 +126,5 @@
         \bm{G} = \begin{bmatrix} \bm{A} & \bm{A}_d & \bm{B} \end{bmatrix}.
     \)
     according to the required dimensions of each matrix.
-    Thereby, the state-space model approximated by DMDc is complete.
+    Thereby, the state-space model approximated by \gls{DMDc} is complete.
     
