--- a/system_id/plots/MAE_vs_q_double_pend.tex
+++ b/system_id/plots/MAE_vs_q_double_pend.tex
@@ -38,7 +38,7 @@
         \end{axis}
     \end{tikzpicture} 
     
-    \caption{DMD and HAVOK predictions error of double pendulum for different numbers of delay-coordinates
+    \caption{\gls{DMD} and \gls{HAVOK} predictions error of double pendulum for different numbers of delay-coordinates
     ($m_1 =$~\SI{0.2}{\kilo\gram}, $l_1 =$~\SI{1}{\meter}, $m_2 =$~\SI{0.1}{\kilo\gram}, $l_2 =$~\SI{0.3}{\meter} $T_{train} =$~\SI{70}{\second}.)}
     \label{fig:MAE_vs_q_double_pend}
 \end{figure}
