--- a/system_id/system_id.tex
+++ b/system_id/system_id.tex
@@ -26,13 +26,13 @@
     \section{Conclusion}
 
         \paragraph
-        DMDc and HAVOK produce very similar prediction errors for a range of different simulation conditions.
-        HAVOK generally has slightly lower errors, but this may have a negligible effect on control.
-        DMDc will be used in the remainder of this work 
-        because the algorithm has been studied more, is less computationally complex and provides similar performance to HAVOK.
+        \gls{DMDc} and \gls{HAVOK} produce very similar prediction errors for a range of different simulation conditions.
+        \gls{HAVOK} generally has slightly lower errors, but this may have a negligible effect on control.
+        \gls{DMDc} will be used in the remainder of this work 
+        because the algorithm has been studied more, is less computationally complex and provides similar performance to \gls{HAVOK}.
         These data-driven methods were shown to produce accurate predictions of the payload dynamics 
         with a practical length of training data, sample time and noise level.
-        This proves to be promising for practical implementation with a MPC on a quadrotor companion computer.
+        This proves to be promising for practical implementation with a \gls{MPC} on a quadrotor companion computer.
         The data-driven methods also proved to provide accurate prediction with a range of different payload parameters
         and even with payloads that act as a double pendulum.
         In contrast, the considered white-box system identification technique 
@@ -40,8 +40,8 @@
         Therefore the data-driven approach provides a more general system identification method 
         that can be used for a range of different suspended payloads without being redesigned for specific dynamics.
 
-        % DMD and HAVOK work very similarly with single pend.
-        % HAVOK has slightly better prediction accuracy, but this small difference has neglible effect on control.
+        % \gls{DMD} and \gls{HAVOK} work very similarly with single pend.
+        % \gls{HAVOK} has slightly better prediction accuracy, but this small difference has neglible effect on control.
         % It is difficult to compare the white-box to the black-box models because the real effect will only be seen during control.
         % However it is clear that the accuracy of the white-box model degrades significantly 
         % when a payload that causes double pendulum dynamics.
