--- a/system_id/white_black_box.tex
+++ b/system_id/white_black_box.tex
@@ -26,16 +26,16 @@
             \item The payload is a point mass.
             \item The link is massless.
             \item The link is rigid.
-            \item The link is attached to the CoM of the quadrotor.
+            \item The link is attached to the \gls{CoM} of the quadrotor.
         \end{itemize}
         The only unknown parameters in the quadrotor and payload model is the payload mass and the link length.
         These parameters are first estimated and then inserted into the predefined, linearised model.
-        This model is used by a LQR controller to damp swing angles while also controlling the vehicle.
+        This model is used by a \gls{LQR} controller to damp swing angles while also controlling the vehicle.
 
         \paragraph 
         The approach works well for systems with predictable dynamics, but is not very adaptable to systems with slightly different dynamics.
         The payload considered by \cite{Erasmus2020} and \cite{Slabber2020} is limited to a small rigid mass suspended from the quadrotor by a non-stretching cable. 
-        In this configuration it was shown that a LQR controller successfully controls a quadrotor while minimising payload swing angles.
+        In this configuration it was shown that a \gls{LQR} controller successfully controls a quadrotor while minimising payload swing angles.
         However, if a payload or cable is used that violates one of the modelling assumptions, the predefined model no longer accurately represent the system.
         Many payloads which are considered for practical drone deliveries do not conform to these assumptions.
         Since the controller is dependent on this model, the mismatch between the model and actual dynamics may result in undesirable controller behaviour.
@@ -65,12 +65,12 @@
         Non-linear models may require control implementations that are too computationally expensive and may not be practically realisable on the available hardware on a quadrotor.
         
         \paragraph
-        DMDc and HAVOK are the two data-driven system identification methods investigated in this work. 
+        \gls{DMDc} and \gls{HAVOK} are the two data-driven system identification methods investigated in this work. 
         These are linear regression techniques that produce linear models to approximate non-linear dynamics.
         Non-linear data-driven techniques like Neural Networks and SINDy \cite{Brunton2016a} may produce models that are more accurate than linear techniques, 
         but at the cost of greater computational complexity.
         % \murray{Name more techniques ??}
-        DMDc and HAVOK are less computationally complex and their models are suitable for linear MPC, which is significantly faster than non-linear MPC.
+        \gls{DMDc} and \gls{HAVOK} are less computationally complex and their models are suitable for linear \gls{MPC}, which is significantly faster than non-linear \gls{MPC}.
         This is desirable for a practical quadrotor implementation, where onboard computational power is limited.
         These techniques and their implementations are explained in the sections below.
         
